# Client-side-React

./: .env  .gitignore  README.md  README.rst  pyproject.toml
alembic/: env.py
alembic/versions/: 772a78831830_first_revision_with_all_schemes.py
python_final/: __init__.py  backend_pre_start.py  main.py
python_final/api/api_v1/: api.py  api_docs.py
python_final/core/: app_setup.py  config.py  cors.py  jwt.py  security.py
python_final/db/: base.py  external_session.py  flask_session.py  utils.py
python_final/models/: comments.py  posts.py  profiles.py  reactions.py  roles.py  users.py
python_final/schemas/: __init__.py  comments.py  posts.py  profiles.py  token.py  users.py
python_final/templates/auth/: login.html  login.js
python_final/templates/index/: homepage.html  index.html  index.js
python_final/templates/profile/: profile.css  profile.html
python_final/templates/register/: register.css  register.html  register.js
python_final/templates/test/: index.html  (+4 more)
react_client_side/: backend_pre_start.py  main.py
react_client_side/core/: app_setup.py  config.py  cors.py  errors.py  jwt.py  security.py
react_client_side/db/: base.py  base_class.py  external_session.py  flask_session.py  utils.py
react_client_side/models/: __init__.py  comments.py  posts.py  profiles.py  reactions.py  roles.py  users.py
react_client_side/schemas/: comments.py  posts.py  roles.py
react_client_side/static/: constants.js  index.html  index.js  style.css  utils.js
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
tests/: test_db.py  test_python_final.py
(+25 files in other folders)
